--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
 management:
   endpoints:
     web:
-      base-path: /actuator
+      base-path: new-api/welcome/actuator
       exposure:
         include: [ "health","prometheus", "metrics" ]
   endpoint:
@@ -15,6 +15,6 @@ management:
       enabled: true
     prometheus:
       enabled: true
-server:
+server: localhost
   port: 8089
 
